methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:27: error: not found: value c
    faireV(c:Color); forward; left(); 
           ^MethodsPicture:33: error: not found: value setColorBrosse
  setColorBrosse(); faireV();
  ^